--- a/.gitignore
+++ b/.gitignore
@@ -2,12 +2,6 @@
 
 # dependencies
 /node_modules
-/.pnp
-.pnp.js
-.env
-.env.development
-.env.production
-
 
 # testing
 /coverage
@@ -17,11 +11,17 @@
 
 # misc
 .DS_Store
+
+# env
+.env
+.env.development
+.env.production
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 
+# log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
